Ton of things: use ResourceLocation#fromNamespaceAndPath, change networking stuff, way of things being registered, remove files, move files, and more